--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ footer h2{
         }
 
         button{
-            margin: 195% 9% 0% 10%
+            margin: 195% 3% 2% 5%;
         }
 
     /* **************PAGE-3***************** */
